--- a/cheftravel/views/fail_login.erb
+++ b/cheftravel/views/fail_login.erb
@@ -2,20 +2,10 @@
 <html>
   <head>
     <title>ChefTravel</title>
-    <link rel="stylesheet" type="text/css" href="login.css">
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/eabalestra/AYDS-Project-2023/9b730cb40b82593e667bd9b70251ac136c17d2f6/cheftravel/public/for_others/fondoLogin.jpeg">
+    <link rel="stylesheet" type="text/css" href="/login.css">
   </head>
+
   <body>
-
-      <style>
-
-    .failmsg{
-      color: red;
-    }
-
-
-    </style>
-
     <div class="login-box">
       <img class="avatar" src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/chef_recortado.png?raw=true" alt="logo de cheftravel">
       <br><h1>Login</h1>
