--- a/cheftravel/views/menu.erb
+++ b/cheftravel/views/menu.erb
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-
   <title>ChefTravel</title>
-
-  <link rel="stylesheet" type="text/css" href="arg.css"></head>
+  <link rel="stylesheet" type="text/css" href="/arg.css">
+</head>
 <body>
 
 		<nav>
