--- a/cheftravel/views/ranking.erb
+++ b/cheftravel/views/ranking.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ChefRANKING</title>
+  <title>Chef-RANKING</title>
   <style>
     body {
       background-color: #E0FFFF; /* Celeste claro */
