--- a/cheftravel/views/register.erb
+++ b/cheftravel/views/register.erb
@@ -1,27 +1,11 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <title>ChefTravel</title>
-    <link rel="stylesheet" type="text/css"  href="login.css">
+    <link rel="stylesheet" type="text/css"  href="/login.css">
   </head>
   <body>
-    <style>
-    .centrar {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }      
 
-    body {
-      background-image: url("https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/for_others/fondoLogin.jpeg?raw=true");
-      background-size: cover;
-      color: #fff;
-      font-family: 'Helvetica Neue', sans-serif;
-      text-align: center;
-      padding: 10px;
-    }
-    </style>
     <div class="login-box">
       <img class="avatar" src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/chef_recortado.png?raw=true" alt="logo de cheftravel">
       <br><h1> Registrese </h1>
