--- a/cheftravel/views/frontera.erb
+++ b/cheftravel/views/frontera.erb
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="/question.css">
+
+  <title><%= level.name %></title>
+  <link rel="stylesheet" type="text/css" href="/frontera.css">
 
 </head>
 <body>
-  <h1>Nivel <%= level.id %>: Cocinemos <%= level.name %>, <%= user.firstname %>!</h1>
-  
+<div class="titulo">
+  <h1>Felicidades! Llegaste a la <%= level.name %>, <%= user.firstname %>. <br>Veamos si tus capacidades culinarias argentas te ayudan a cruzar</h1>
+</div>
   <img src="<%= question.link_imagen %>" border="1" width="300" height="200">
   
   <main>
