--- a/cheftravel/views/menu.erb
+++ b/cheftravel/views/menu.erb
@@ -1,69 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
 
   <title>ChefTravel</title>
  
-  <link rel="stylesheet" type="text/css" href="arg.css"></head>
-<body>
+  <style>
+    .button-link {
+      display: inline-block;
+      text-decoration: none;
+    }
 
-		<nav>
-			<ul class="menu">
-        <li><a href="#">Recetario</a></li>
-        <li><a href="http://localhost:4567/ranking">Ranking</a></li>
-        <li><a href="#">Puntos: <%= user.points.to_json%></a></li>
-				<li><a href="#"><%= user.name%></a></li>
-        <li><a href="http://localhost:4567/profile">Profile</a></li>
-				<li><a href="http://localhost:4567/logout">Logout</a></li>
-			</ul>
-		</nav>
+    .buttonlevel {
+      padding: 10px 20px;
+      background-color: #000000;
+      color: #ffffff;
+      border: none;
+      border-radius: 1000px;
+      cursor: pointer;
+    }
 
-    <div id="contenedor">
-      <div class="banner_img" >
-        <img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/for_others/arg_png.png?raw=true">
-      </div>
-    </div>
-    
-<style>
-.button-link {
-  display: inline-block;
-  text-decoration: none;
-}
+    .buttonlevel span {
+      font-size: 15px; /* Tamaño de fuente reducido */
+      display: inline-block;
+      transform: scale(0.9); /* Escalar el texto al 80% del tamaño original */
+      transform-origin: center center; /* Establecer el origen de la transformación en el centro */
+    }
 
-.buttonlevel {
-  padding: 10px 20px;
-  background-color: #000000;
-  color: #ffffff;
-  border: none;
-  border-radius: 1000px;
-  cursor: pointer;
-}
-
-.buttonlevel span {
-  font-size: 15px; /* Tamaño de fuente reducido */
-  display: inline-block;
-  transform: scale(0.9); /* Escalar el texto al 80% del tamaño original */
-  transform-origin: center center; /* Establecer el origen de la transformación en el centro */
-}
-
-.buttonlevel:hover {
-  background-color: #02bac7;
-}
+    .buttonlevel:hover {
+      background-color: #02bac7;
+    }
   </style>
+  <link rel="stylesheet" type="text/css" href="/arg.css"></head>
+  <body>
+
+      <nav>
+        <ul class="menu">
+          <li><a href="#">Recetario</a></li>
+          <li><a href="http://localhost:4567/ranking">Ranking</a></li>
+          <li><a href="#">Puntos: <%= user.points.to_json%></a></li>
+          <li><a href="#"><%= user.name%></a></li>
+          <li><a href="http://localhost:4567/profile">Profile</a></li>
+          <li><a href="http://localhost:4567/logout">Logout</a></li>
+        </ul>
+      </nav>
+
+      <div id="contenedor">
+        <div class="banner_img" >
+          <img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/for_others/arg_png.png?raw=true">
+        </div>
+      </div>
+      
 
 
-<a href="http://localhost:4567/level/1" class="button-link">
-  <button class="buttonlevel"><span>Level 1</span></button>
-</a>
-<a href="http://localhost:4567/level/2" class="button-link">
-  <button class="buttonlevel"><span>Level 2</span></button>
-</a>
-<a href="http://localhost:4567/level/3" class="button-link">
-  <button class="buttonlevel"><span>Level 3</span></button>
-</a>
-<a href="http://localhost:4567/level/4" class="button-link">
-  <button class="buttonlevel"><span>Frontera a Chile</span></button>
-</a>
-</body>
+    <a href="http://localhost:4567/level/1" class="button-link">
+    <button class="buttonlevel"><span>Level 1</span></button>
+    </a>
+    <a href="http://localhost:4567/level/2" class="button-link">
+    <button class="buttonlevel"><span>Level 2</span></button>
+    </a>
+    <a href="http://localhost:4567/level/3" class="button-link">
+    <button class="buttonlevel"><span>Level 3</span></button>
+    </a>
+    <a href="http://localhost:4567/level/1000" class="button-link">
+    <button class="buttonlevel"><span>Frontera a Chile</span></button>
+    </a>
+  </body>
 </html>
