--- a/cheftravel/views/arg.erb
+++ b/cheftravel/views/arg.erb
@@ -4,7 +4,7 @@
 
   <title>ChefTravel - Argentina</title>
 
-  <link rel="stylesheet" type="text/css" href="/arg.css"></head>
+  <link rel="stylesheet" type="text/css" href="/pais.css"></head>
   <body>
 
     <nav>
