--- a/cheftravel/views/arg.erb
+++ b/cheftravel/views/arg.erb
@@ -21,21 +21,12 @@
     <div id="contenedor">
       <div class="banner_img" >
         <img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/for_others/arg_png.png?raw=true">
+        <a href="http://localhost:4567/level/1" class= "buttonlevel" style="top: 580px; right: 620px;">Level 1</a>
+<%#         <a href="http://localhost:4567/level/2" class= "buttonlevel" style="top: 580px; right: 600px;">Level 2</a>
+        <a href="http://localhost:4567/level/3" class= "buttonlevel" style="top: 580px; right: 600px;">Level 3</a>
+        <a href="http://localhost:4567/level/1000" class= "buttonlevel" style="top: 580px; right: 600px;">Frontera a Chile</a> %>
       </div>
     </div>
-  
-    <a href="http://localhost:4567/level/1" class="button-link">
-    <button class="buttonlevel"><span>Level 1</span></button>
-    </a>
-    <a href="http://localhost:4567/level/2" class="button-link">
-    <button class="buttonlevel"><span>Level 2</span></button>
-    </a>
-    <a href="http://localhost:4567/level/3" class="button-link">
-    <button class="buttonlevel"><span>Level 3</span></button>
-    </a>
-    <a href="http://localhost:4567/level/1000" class="button-link">
-    <button class="buttonlevel"><span>Frontera a Chile</span></button>
-    </a>
 
   </body>
 </html>
