--- a/cheftravel/views/ranking.erb
+++ b/cheftravel/views/ranking.erb
@@ -1,90 +1,47 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Chef-RANKING</title>
-  <style>
-    body {
-      background-color: #E0FFFF; /* Celeste claro */
-      font-family: Arial, sans-serif;
-    }
+ <html lang="en" title="Coding design" >
+ 
+ <head>
+     
+     <title>Chef-RANKING</title>
+      <link rel="stylesheet" type="text/css" href="/ranking.css"></head>
+ </head>
+ 
+ <body>
+     <main class="table">
+         <section class="table__header">
+             <h1>CHEF-RANKING</h1>
+             
+             
+             </div>
+         </section>
+         <section class="table__body">
+             <table>
+                 <thead>
+                     <tr>
+                        <tr>
+                            <th>Posición</th>
+                            <th>Jugador</th>
+                            <th>Puntos</th>
+                          </tr>
+                     </tr>
+                 </thead>
+                 <tbody>
+                    <% userspoints.each_with_index do |user, index| %>
+                     <tr>
+                        <td><%= index + 1 %></td>
+                        <td><%= usersname[index].name %></td>
+                        <td><%= user.points %></td>
+                     </tr>
+                     <% end %>
+                 </tbody>
+             </table>
 
-    h1 {
-      color: #FFFFFF; /* Blanco */
-      background-color: #5F9EA0; /* Celeste medio */
-      padding: 10px;
-      text-align: center;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-
-    table th, table td {
-      padding: 8px;
-      text-align: left;
-      border-bottom: 1px solid #FFFFFF; /* Blanco */
-    }
-
-    table th {
-      background-color: #5F9EA0; /* Celeste medio */
-      color: #FFFFFF; /* Blanco */
-    }
-
-    table tr:nth-child(even) {
-      background-color: #E0FFFF; /* Celeste claro */
-    }
-
-    table tr:nth-child(odd) {
-      background-color: #FFFFFF; /* Blanco */
-    }
-
-    .ranking-izq {
-      color: black;
-      position: absolute;
-      top: 0
-      left: 0
-    }
-
-    input[type="submit"] {
-    background-color: #3b3f3cb7;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 5%;
-  }
-  </style>
-  
-</head>
-
-<body>
-  <h1>CHEF-RANKING</h1>
-
-  <table>
-    <tr>
-      <th>Posición</th>
-      <th>Jugador</th>
-      <th>Puntos</th>
-    </tr>
-
-    <% userspoints.each_with_index do |user, index| %>
-      <tr>
-        <td><%= index + 1 %></td>
-        <td><%= usersname[index].name %></td>
-        <td><%= user.points %></td>
-      </tr>
-    <% end %>
-  </table>
-
-  <div class="ranking-izq">
-    <a href="http://localhost:4567/menu"><input type="submit" name="menu" value="Volver al menu"></a>
-  </div>
-</body>
-</html>
+             <div class="ranking-izq">
+                <a href="http://localhost:4567/menu"><button class="buttonmenu"><span>Volver al menu</span></button></a>
+              </div>
+         </section>
+     </main>
+ </body>
+ 
+ </html>
