--- a/cheftravel/views/arg.erb
+++ b/cheftravel/views/arg.erb
@@ -18,15 +18,17 @@
       </ul>
     </nav>
 
-    <div id="contenedor">
-      <div class="banner_img" >
-        <img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/for_others/arg_png.png?raw=true">
-        <a href="http://localhost:4567/level/1" class= "buttonlevel" style="top: 580px; right: 620px;">Level 1</a>
-<%#         <a href="http://localhost:4567/level/2" class= "buttonlevel" style="top: 580px; right: 600px;">Level 2</a>
-        <a href="http://localhost:4567/level/3" class= "buttonlevel" style="top: 580px; right: 600px;">Level 3</a>
-        <a href="http://localhost:4567/level/1000" class= "buttonlevel" style="top: 580px; right: 600px;">Frontera a Chile</a> %>
-      </div>
-    </div>
+ 
+   <div id="contenedor">
+  <div class="banner_img">
+    <img src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/cheftravel/public/for_others/arg_png.png?raw=true">
+    <a href="http://localhost:4567/level/1" class="pin level1" style="top: 25%; left: 48%;"><span>Level 1</span></a>
+    <a href="http://localhost:4567/level/2" class="pin level2" style="top: 20%; left: 42%;"><span>Level 2</span></a>
+    <a href="http://localhost:4567/level/3" class="pin level3" style="top: 50%; left: 45%;"><span>Level 3</span></a>
+    <a href="http://localhost:4567/level/1000" class="pin fronteraChile" style="top: 35%; left: 40%;"><span>Frontera a Chile</span></a>
+  </div>
+</div>
+
 
   </body>
 </html>
