--- a/cheftravel/public/pais.css
+++ b/cheftravel/public/pais.css
@@ -1,5 +1,3 @@
-
-
 /* menu de arriba */
 .menu {
   background: rgb(29, 113, 165);
@@ -54,16 +52,17 @@ body {
 }
 
 .pin {
-  background: #dcdee6;
+  background: rgb(29, 113, 165);
   position: absolute;
   width: 0.7em;
   height: 0.7em;
   border-radius: 50%;
+  color: #fff;
 }
 
 .pin::before {
   content: '';
-  background: #39c027;
+  background: rgb(29, 113, 165);
   position: absolute;
   top: 50%;
   left: 50%;
@@ -81,30 +80,30 @@ body {
   left: 1.5em;
   top: 50%;
   transform: translateY(-50%);
-  background: #000;
+  background: rgb(29, 113, 165);;
   border-radius: 3em;
   padding: 0.3em 0.6em;
   font-size: 0.9em;
 }
 
 .level1 {
-  top: 30%;
-  left: 45%;
+  top: 75%;
+  left: 50%;
 }
 
 .level2 {
-  top: 45%;
-  left: 25%;
+  top: 60%;
+  left: 45%;
 }
 
 .level3 {
-  top: 55%;
-  left: 25%;
+  top: 45%;
+  left: 42%;
 }
 
 .fronteraChile {
   top: 35%;
-  left: 35%;
+  left: 37%;
 }
 
 @keyframes pulse {
@@ -113,3 +112,4 @@ body {
     transform: translate(-50%,-50%) scale(2.5);
   }
 }
+
