--- a/cheftravel/views/ranking.erb
+++ b/cheftravel/views/ranking.erb
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
- <html lang="en" title="Coding design" >
- 
- <head>
-     
-     <title>Chef-RANKING</title>
-      <link rel="stylesheet" type="text/css" href="/ranking.css"></head>
- </head>
- 
- <body>
-     <main class="table">
-         <section class="table__header">
-             <h1>CHEF-RANKING</h1>
-             
-             
-             </div>
-         </section>
-         <section class="table__body">
-             <table>
-                 <thead>
-                     <tr>
-                        <tr>
-                            <th>Posición</th>
-                            <th>Jugador</th>
-                            <th>Puntos</th>
-                          </tr>
-                     </tr>
-                 </thead>
-                 <tbody>
-                    <% userspoints.each_with_index do |user, index| %>
-                     <tr>
-                        <td><%= index + 1 %></td>
-                        <td><%= usersname[index].name %></td>
-                        <td><%= user.points %></td>
-                     </tr>
-                     <% end %>
-                 </tbody>
-             </table>
 
-             <div class="ranking-izq">
-                <a href="http://localhost:4567/menu"><button class="buttonmenu"><span>Volver al menu</span></button></a>
-              </div>
-         </section>
-     </main>
- </body>
+  <head>
+    <title>Chef-RANKING</title>
+    <link rel="stylesheet" type="text/css" href="/ranking.css"></head>
+  </head>
+  
+  <body>
+      <nav>
+        <ul class="menu">
+          <li><a href="http://localhost:4567/menu">Menú</a></li>
+          <li><a href="#">Recetario</a></li>
+          <li><a href="http://localhost:4567/ranking">Ranking</a></li>
+          <li><a href="http://localhost:4567/profile"><%= user.name%></a></li>
+          <li><a>Puntos: <%= user.points.to_json%></a></li>
+          <li><a href="http://localhost:4567/logout">Logout</a></li>
+        </ul>
+      </nav>
+
+    <main class="table">
+      <section class="table__header">
+        <h1>CHEF-RANKING</h1>
+      </section>
+      <section class="table__body">
+        <table>
+          <thead>
+            <tr>
+              <tr>
+                <th>Posición</th>
+                <th>Jugador</th>
+                <th>Puntos</th>
+              </tr>
+            </tr>
+          </thead>
+          <tbody>
+            <% userspoints.each_with_index do |user, index| %>
+              <% if index < 10 %>
+                <tr>
+                  <td><%= index + 1 %></td>
+                  <td><%= usersname[index].name %></td>
+                  <td><%= user.points %></td>
+                </tr>
+              <% else %>
+                <% break %>
+              <% end %>
+            <% end %>
+          </tbody>
+        </table>
+      </section>
+    </main>
+  </body>
  
  </html>
