--- a/cheftravel/views/index.erb
+++ b/cheftravel/views/index.erb
@@ -7,7 +7,7 @@
 
   <body>
     <div class="login-box">
-      <img class="avatar" src="https://github.com/eabalestra/AYDS-Project-2023/blob/main/chef_recortado.png?raw=true" alt="logo de cheftravel">
+      <img class="avatar" src="https://raw.githubusercontent.com/eabalestra/AYDS-Project-2023/develop/cheftravel/public/chef_recortado.png" alt="logo de cheftravel">
       <br><h1>Login</h1>
       <form action="/logmenu" method="POST">
         <!-- USERNAME-->
