--- a/cheftravel/views/profile.erb
+++ b/cheftravel/views/profile.erb
@@ -1,9 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Profile - ChefTravel</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profile - ChefTravel</title>
+    <link rel="stylesheet" href="/profile.css">
 </head>
 <body>
-  
+
+  <nav>
+    <ul class="menu">
+      <li><a href="#">Recetario</a></li>
+      <li><a href="http://localhost:4567/ranking">Ranking</a></li>
+      <li><a href="http://localhost:4567/profile"><%=user.name%></a></li>
+      <li><a>Puntos: <%= user.points.to_json%></a></li>
+      <li><a href="http://localhost:4567/logout">Logout</a></li>
+    </ul>
+  </nav>
+
+<div class="frame">
+  <div class="center">
+    
+    <div class="profile">
+      <div class="image">
+        <div class="circle-1"></div>
+        <div class="circle-2"></div>
+        <img src="https://cdn-icons-png.flaticon.com/512/8428/8428718.png" width="70" height="70" alt="user image">
+      </div>
+      
+      <div class="name"><%= user.name %></div>
+      <div class="email"><%= user.email %></div>
+      
+      <div class="actions">
+        <a href="/update_profile" class="btn">Modificar Datos</a>
+        <a href="/menu" class="btn">Volver al Menú</a>
+      </div>
+    </div>
+    
+    <div class="stats">
+      <div class="box">
+        <span class="value"><%= user.firstname %></span>
+        <span class="parameter">Thanks for using ChefTravel!</span>
+      </div>
+      <div class="box">
+        <span class="value"><%= user.points %></span>
+        <span class="parameter">Points</span>
+      </div>
+      <div class="box">
+        <span class="value"><%= progress %>%</span>
+        <span class="parameter">Progress</span>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
