--- a/cheftravel/views/menu.erb
+++ b/cheftravel/views/menu.erb
@@ -8,7 +8,7 @@
 
     <nav>
       <ul class="menu">
-        <li><a href="#">Recetario</a></li>
+        <li><a href="http://localhost:4567/recipe-book">Recetario</a></li>
         <li><a href="http://localhost:4567/ranking">Ranking</a></li>
         <li><a href="http://localhost:4567/profile"><%=user.name%></a></li>
         <li><a>Puntos: <%= user.points.to_json%></a></li>
