[#186222105]login & register with gmail

--- a/cheftravel/views/fail_login.erb
+++ b/cheftravel/views/fail_login.erb
@@ -25,6 +25,24 @@
 
         </form>
       </form>
+       <!-- GOOGLE LOGIN -->
+      <body>
+        <script src="https://accounts.google.com/gsi/client" async></script>
+        <div id="g_id_onload"
+            data-client_id="832010478415-ugp0o039v71f8kv1334rckru6tegj2qa.apps.googleusercontent.com"
+            data-login_uri="http://localhost:4567/auth/google_callback"
+            data-auto_prompt="false">
+        </div>
+        <div class="g_id_signin"
+            data-type="standard"
+            data-size="large"
+            data-theme="outline"
+            data-text="sign_in_with"
+            data-shape="rectangular"
+            data-logo_alignment="center"
+            >
+        </div>
+      </body>
     </div>
   </body>
 </html>
