--- a/cheftravel/views/index.erb
+++ b/cheftravel/views/index.erb
@@ -3,6 +3,7 @@
   <head>
     <title>ChefTravel</title>
     <link rel="stylesheet" type="text/css" href="/login.css">
+    <meta name="google-signin-client_id" content="832010478415-ugp0o039v71f8kv1334rckru6tegj2qa.apps.googleusercontent.com">
   </head>
 
   <body>
@@ -24,6 +25,24 @@
           <a href="http://localhost:4567/register">No tienes cuenta? Registrate gratis!</a>
         </form>
       </form>
+      <!-- GOOGLE LOGIN -->
+      <body>
+        <script src="https://accounts.google.com/gsi/client" async></script>
+        <div id="g_id_onload"
+            data-client_id="832010478415-ugp0o039v71f8kv1334rckru6tegj2qa.apps.googleusercontent.com"
+            data-login_uri="http://localhost:4567/auth/google_callback"
+            data-auto_prompt="false">
+        </div>
+        <div class="g_id_signin"
+            data-type="standard"
+            data-size="large"
+            data-theme="outline"
+            data-text="sign_in_with"
+            data-shape="rectangular"
+            data-logo_alignment="center"
+            >
+        </div>
+      </body>
     </div>
   </body>
 </html>
