[#186328463] - fixed offenses and implementation of some controllers

--- a/cheftravel/views/index.erb
+++ b/cheftravel/views/index.erb
@@ -17,7 +17,7 @@
 
         <!-- PASSWORD-->
         <label for="password">Password</label>
-        <input type="password" name="password" placeholder="Enter password">
+        <input type="password" name="password_digestpassword_diggest" placeholder="Enter password">
 
         <input type="submit" value="Let's cook!">
 
